init v3 with ENV fixes